--- a/src/style.css
+++ b/src/style.css
@@ -98,3 +98,38 @@ a {
     font-style: italic;
     color: rgba(255, 255, 255, 0.80);
 }
+
+/* ---------- MENU ----------*/
+.menu-list {
+    height: 100%;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+}
+
+.category:nth-child(2) {
+    grid-area: 2 / 1 / 3 / 2; 
+}
+
+.category {
+    font-family: var(--primary-ft);
+    font-size: var(--big-sz);
+    text-transform: uppercase;
+    display: flex;
+    flex-direction: column;
+}
+
+.food {
+    font-family: var(--secondary-ft);
+    font-size: var(--smallest-sz);
+}
+
+.food-item {
+    text-transform: uppercase;
+    color: var(--primary-clr);
+}
+
+.description {
+    text-transform: capitalize;
+    font-style: italic;
+}
